k8s_charts/kustomize/overlays/specific_env/deployment-httpserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kolibri-service
spec:
  template:
    spec:
#      TODO: if any nodeSelector wanted, fill in here
#      nodeSelector:
#        someTypeKey: [value]
      containers:
        - name: kolibri-service
          image: awagen/kolibri-fleet-akka:0.1.0-rc4
          imagePullPolicy: Always
