k8s_charts/kustomize/overlays/specific_env/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    name: kolibri-service
  name: kolibri-service
spec:
  rules:
    # TODO: fill in correct host here to accept requests for the httpserver nodes of the kolibri-service
    # (make sure the selector in the service.yml only targets the httpserver nodes of the cluster)
    - host: ##INGRESS_HOST
      http:
        paths:
          - backend:
              serviceName: kolibri-service
              servicePort: 8000
            path: /
